chore: bump version to 4.0.0, add release note and update docs (#23)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@midnight-ntwrk/dapp-connector-api",
-  "version": "4.0.0-beta.2",
+  "version": "4.0.0",
   "packageManager": "yarn@4.12.0",
   "description": "Midnight DApp Connector API",
   "types": "dist/index.d.ts",
